Documents/MetaDataIO/MetadataIO-distr-33.0.3-bin/repos/src/objects/Driver__c.object
<CustomObject>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote</label>
        <referenceTo>Quote</referenceTo>
        <relationshipLabel>Drivers</relationshipLabel>
        <relationshipName>Drivers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Primary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Secondary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>associatedQuote__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Drivers</relationshipLabel>
        <relationshipName>Drivers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Driver</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Driver Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Drivers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>